[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.3.0-beta-rc.4"
hdk = "=0.2.0-beta-rc.5"
holochain_integrity_types = "=0.1.2"
serde = "1"

[workspace.dependencies.bar]
path = "dnas/foo/zomes/coordinator/bar"

[workspace.dependencies.bar_integrity]
path = "dnas/foo/zomes/integrity/bar"
